# Materiais-MLET

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: platform-quality.agent.md  pr-evaluator.agent.md  tech-manager.agent.md
.github/prompts/: architecture-evaluate.prompt.md  architecture-integration.prompt.md  azure-architecture-review.prompt.md  azure-cost-optimize.prompt.md  azure-migrate.prompt.md  azure-troubleshoot.prompt.md  codebase-onboarding.prompt.md  connector-audit.prompt.md  connector-design.prompt.md  migration-plan.prompt.md  platform-cicd-audit.prompt.md  platform-dependency-audit.prompt.md  platform-quality-evaluation.prompt.md  pr-review.prompt.md  python-implement.prompt.md  python-refactor.prompt.md  python-review.prompt.md  rust-implement.prompt.md  rust-review.prompt.md  security-audit.prompt.md  ship-deploy-hotfix.prompt.md  tech-debt-assessment.prompt.md  tech-lead-document-architecture.prompt.md  tech-lead-innovation-research.prompt.md  tech-lead-investigate.prompt.md  tech-lead-issue-correction.prompt.md  tech-lead-issue-execute.prompt.md  tech-lead-plan.prompt.md  typescript-implement.prompt.md  typescript-review.prompt.md  ui-accessibility-audit.prompt.md  ui-design-component.prompt.md
.github/workflows/: lightweight-validation.yml
constraints/: dev.txt  fase01.txt  fase02.txt  fase03.txt  fase04.txt  fase05.txt
docs/: README.md  changelog.md  contributing.md  delivery-status.md  live-session-index.md  live-study-artifact-inventory.md  navigation.md  repository-bootstrap.md  repository-readiness-audit.md  study-group-index.md
docs/cohorts/: README.md  mlet-06.md  mlet-07.md  mlet-08.md  mlet-09.md  mlet-10.md  mlet-11.md  mlet-12.md  mlet-13.md
fase-01-fundamentos-de-ml/: README.md
fase-01-fundamentos-de-ml/01-ciclo-de-vida-de-modelos/: README.md
fase-01-fundamentos-de-ml/02-fundamentos-modelos-ml/: README.md
fase-01-fundamentos-de-ml/03-engenharia-software-cientistas-dados/: README.md
fase-01-fundamentos-de-ml/04-apis-inferencia-modelos/: README.md
fase-01-fundamentos-de-ml/05-bibliotecas-internas-sdks/: README.md
fase-01-produtizacao-de-modelos/: README.md
fase-01-produtizacao-de-modelos/01-ciclo-de-vida-de-modelos/: README.md
fase-01-produtizacao-de-modelos/02-fundamentos-modelos-ml/: README.md
fase-01-produtizacao-de-modelos/03-engenharia-software-cientistas-dados/: README.md
fase-01-produtizacao-de-modelos/03-engenharia-software-cientistas-dados/lives/fase01-live-engenharia-de-software-para-cientistas-de-dados/: .gitignore  .pre-commit-config.yaml  README.md  TUTORIAL.md  atividade-do-aluno.md  checklist-engenharia.md  exercicio.py  guia-da-live.md  pyproject.toml
fase-01-produtizacao-de-modelos/03-engenharia-software-cientistas-dados/lives/fase01-live-engenharia-de-software-para-cientistas-de-dados/notebooks/: INSTRUCOES_PARA_RODAR_O_NOTEBOOK.md  california-housing-prediction.ipynb
fase-01-produtizacao-de-modelos/03-engenharia-software-cientistas-dados/lives/fase01-live-engenharia-de-software-para-cientistas-de-dados/src/ml_pipeline/: __init__.py  cli.py  config.py  data.py  evaluation.py  features.py  models.py  persistence.py  pipeline.py  preprocessing.py  schemas.py  training.py
fase-01-produtizacao-de-modelos/03-engenharia-software-cientistas-dados/lives/fase01-live-engenharia-de-software-para-cientistas-de-dados/tests/: conftest.py  test_cli.py  test_data.py  test_features.py  test_models.py  test_persistence.py  test_pipeline.py  test_preprocessing.py  test_schemas.py
fase-01-produtizacao-de-modelos/04-apis-inferencia-modelos/: README.md
fase-01-produtizacao-de-modelos/05-bibliotecas-internas-sdks/: README.md
fase-01-produtizacao-de-modelos/grupos-de-estudo/: README.md
fase-02-containers-e-ambientes-reprodutiveis/: README.md
fase-02-containers-e-ambientes-reprodutiveis/01-clean-code-ml/: README.md
fase-02-containers-e-ambientes-reprodutiveis/02-gerenciamento-dependencias/: README.md  desafio.md
fase-02-containers-e-ambientes-reprodutiveis/03-docker-kubernetes/: README.md
fase-02-containers-e-ambientes-reprodutiveis/04-dvc-mlflow/: README.md
fase-02-feature-engineering-versionamento/: README.md
fase-02-feature-engineering-versionamento/01-clean-code-ml/: README.md
fase-02-feature-engineering-versionamento/02-gerenciamento-dependencias/: README.md
fase-02-feature-engineering-versionamento/02-gerenciamento-dependencias/aula03-poetry-vs-uv/poetry_project/: pyproject.toml
fase-02-feature-engineering-versionamento/03-docker-kubernetes/: README.md
fase-02-feature-engineering-versionamento/04-dvc-mlflow/: README.md
fase-03-cloud-e-mlops/: README.md
fase-03-cloud-e-mlops/01-deploy-em-nuvem/: README.md
fase-03-cloud-e-mlops/02-integracao-cicd/: README.md  desafio.md
fase-03-cloud-e-mlops/03-pipeline-treino-deploy-automatico/: README.md  desafio.md
fase-03-cloud-e-mlops/04-monitoracao-performance/: README.md  desafio.md
fase-03-cloud-e-mlops/05-servicos-de-monitoracao/: README.md  desafio.md
fase-03-cloud-e-mlops/06-latencia-performance/: README.md  desafio.md
fase-03-deploy-e-servir-modelos/: README.md
fase-03-deploy-e-servir-modelos/01-deploy-em-nuvem/: README.md
fase-03-deploy-e-servir-modelos/02-integracao-cicd/: README.md
fase-03-deploy-e-servir-modelos/03-pipeline-treino-deploy-automatico/: README.md
fase-03-deploy-e-servir-modelos/04-monitoracao-performance/: README.md
fase-03-deploy-e-servir-modelos/05-servicos-de-monitoracao/: README.md
fase-04-monitoramento-e-governanca/: README.md
fase-04-validacao-de-dados/: LICENSE  README.md  requirements.txt
fase-04-validacao-de-dados/aula_04/: mlflow.db  (+1 more)
fase-05-deploy-avancado-de-ia-generativa/: README.md
fase-05-llms-e-agentes/: README.md
grupos-de-estudo/: README.md
lives/: LIVES.md  README.md
tests/: test_executable_assets_smoke.py  test_first_wave_extraction.py  test_readme_contract.py
tools/: __init__.py  repo_tasks.py  update_discipline_readmes.py
(+801 files in other folders)
