[project]
name = "mlet-code-samples"
version = "1.0.0"
description = "Código de suporte para as aulas da Pós-Tech Machine Learning Engineering (FIAP)"
requires-python = ">=3.11,<3.13"
readme = "docs/navigation.md"
license = { text = "MIT" }

[project.optional-dependencies]
fase01 = [
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.2",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.45",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "mlflow>=2.11",
    "pandera>=0.18",
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.24",
    "httpx>=0.27",
]
fase02 = [
    "dvc>=3.47",
    "poetry>=1.8",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
]
fase03 = [
    "apache-airflow>=2.8",
    "prefect>=2.16",
    "feast>=0.37",
    "prometheus-client>=0.20",
    "boto3>=1.34",
    "google-cloud-aiplatform>=1.43",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
fase04 = [
    "evidently>=0.4",
    "nannyml>=0.10",
    "whylogs>=1.6",
    "great-expectations>=0.18",
    "fairlearn>=0.10",
    "dowhy>=0.11",
    "econml>=0.15",
    "pandera>=0.18",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
]
fase05 = [
    "langchain>=0.1",
    "langgraph>=0.0.30",
    "vllm>=0.3",
    "transformers>=4.38",
    "peft>=0.9",
    "ragas>=0.1",
    "nemo-guardrails>=0.8",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
