[project]
name = "fase01-live-eng-soft-cientistas-dados"
version = "0.1.0"
description = "Live hands-on: Engenharia de Software para Cientistas de Dados"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "numpy>=1.26",
  "pandera>=0.20",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pre-commit>=3.6",
  "jupyterlab>=4.1",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.scripts]
ml-pipeline = "ml_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_pipeline"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
