[project]
name = "ml-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "pandera>=0.20",
  "pydantic-settings>=2.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "ruff>=0.6", "pre-commit>=3.6", "ipykernel>=6.29"]

[project.scripts]
ml-pipeline = "ml_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_pipeline"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
