[project]
name = "feature-store-demo"
version = "0.1.0"
description = "Projeto de exemplo para comparacao entre ferramentas"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"